--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "version": 2,
   "cleanUrls": true,
-  "trailingSlash": false,
-  "functions": {
-    "api/send-pdf.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "trailingSlash": false
 }
